Add Lasagna to index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
     <title>Odin-recipes</title>
 </head>
 <body>
+    <h1>Odin Recipes</h1>
+    <p>
+        <ahref="recipes/lasagna.html" target='new'>Lasagna</ahref> 
+    </p>
 </body>
 </html>
