--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -27,6 +27,7 @@
         1/2 uur a 3 kwartier op laag vuur laten sudderen met deksel op de pan, af en toe roeren. Ondertussen de oven voorverwarmen op 180 gr. C. Voor de bechamelsaus de boter smelten (niet bruin laten worden), bloem erdoor roeren en verwarmen (schrik niet; het wordt een soort klont, maar dat komt goed!). Daarna beetje bij beetje de koude melk met een garde erdoor roeren. Laten koken en blijven roeren tot je een dikke saus hebt. Op smaak brengen met zout en peper.
         In een ingevette ovenschaal 1 laag lasagnevellen leggen. Vervolgens bedekken met 1/3 van de bechamelsaus, 1/3 van de bolognesesaus en 1 in plakjes gesneden bolletje mozzarella of 4 plakken kaas. Nu weer herhalen met een laag lasagnevellen, saus en kaas, vervolgens nog zo'n laag maar dan zonder kaas. Afdekken met aluminium-folie en in de oven schuiven, boven het midden. Na 30 min. de folie verwijderen en nog 15 min. in de oven laten. Als het "knettert" is het klaar.
     </p>
+    <img src="../images/lasagna.jpg" alt="Lasagna">
 </ul>
    
 </body>
