addes links on index.html

--- a/recipes/pasta-carbonara.html
+++ b/recipes/pasta-carbonara.html
@@ -27,7 +27,7 @@
     <li>3 eieren</li>   
 </ul>
 <h2>Bereidingsstappen</h2>
-<ol><li>Bak spekblokjes/li>
+<ol><li>Bak spekblokjes</li>
     <li>Kook pasta</li>
     <li>Klop eieren + parmezaanse kaas</li>
     <li>Voeg eier mengsel toe aan pasta</li>
