--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 <body>
     <h1>Odin Recipes</h1>
     <p>
-        <a href="recipes/lasagna.html" target='new'>Lasagna</ahref> 
+        <ul>
+           <li><a href="recipes/lasagna.html" target='new'>Lasagna</ahref></li>
+           <li><a href="recipes/mojito.html" target='new'>Mojito (18+)</ahref></li>
+           <li><a href="recipes/pasta-carbonara.html" target='new'>Pasta carbonara</ahref></li>
+        </ul>
     </p>
 </body>
 </html>
