Made some containers

--- a/index.html
+++ b/index.html
@@ -9,12 +9,22 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p>
-            <ul>
-                <li><a href="recipes/lasagna.html" target='new'>Lasagna</ahref></li>
-                <li><a href="recipes/mojito.html" target='new'>Mojito (18+)</ahref></li>
-                <li><a href="recipes/pasta-carbonara.html" target='new'>Pasta carbonara</ahref></li>
-            </ul>
-    </p>
+    <p>Looking for some greet recipes? Don't search further, you've found the right spot!</p>
+        <div class="flex-container">
+           
+            <div>
+                <h2><a href="recipes/lasagna.html" target='new'>Lasagna</a></h2>
+                <p>A perfect recipe for lasagna</p>
+                <img src="images/lasagna.jpg" alt="Lasagna">
+            </div>
+            <div>
+                <h2><a href="recipes/mojito.html" target='new'>Mojito (18+)</a></h2>
+                <p>The perfect drink for hot summer nights.</p>
+            </div>
+            <div>
+                <h2><a href="recipes/pasta-carbonara.html" target='new'>Pasta carbonara</a></h2>
+                <p>Still hungry in the late summer afternoon? Try this carbonara!</p>
+            </div>
+        </div>
 </body>
 </html>
