--- a/index.html
+++ b/index.html
@@ -12,19 +12,45 @@
     <p>Looking for some greet recipes? Don't search further, you've found the right spot!</p>
         <div class="flex-container">
            
-            <div>
+            <div class="flex-item">
                 <h2><a href="recipes/lasagna.html" target='new'>Lasagna</a></h2>
                 <p>A perfect recipe for lasagna</p>
                 <img src="images/lasagna.jpg" alt="Lasagna">
             </div>
-            <div>
+            <div class="flex-item">
                 <h2><a href="recipes/mojito.html" target='new'>Mojito (18+)</a></h2>
                 <p>The perfect drink for hot summer nights.</p>
             </div>
-            <div>
+            <div class="flex-item">
                 <h2><a href="recipes/pasta-carbonara.html" target='new'>Pasta carbonara</a></h2>
                 <p>Still hungry in the late summer afternoon? Try this carbonara!</p>
             </div>
+                <div class="flex-item">
+                    <h2><a href="recipes/pasta-carbonara.html" target='new'>Pasta carbonara</a></h2>
+                    <p>Still hungry in the late summer afternoon? Try this carbonara!</p>
+                </div>
+        </div>
+
+        <div class="flex-container">
+            <div class="flex-container1">
+                <div class="flex-item1">
+                    <h2>Lorem</h2>
+                    <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."</p>
+                </div>
+                <div class="flex-item1">
+                    <h2>Ipsum</h2>
+                    <p>"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                </div>
+            </div>
+            <div class="flex-item2">
+                <h2><a href="recipes/pasta-carbonara.html" target='new'>Pasta carbonara</a></h2>
+                <p>Still hungry in the late summer afternoon? Try this carbonara!</p>
+            </div>
+            <div class="flex-item">
+                <h2><a href="recipes/pasta-carbonara.html" target='new'>Pasta carbonara</a></h2>
+                <p>Still hungry in the late summer afternoon? Try this carbonara!</p>
+            </div>
+
         </div>
 </body>
 </html>
