--- a/index.html
+++ b/index.html
@@ -9,21 +9,28 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p>Looking for some greet recipes? Don't search further, you've found the right spot!</p>
+    
+    <p class="flex-item">Looking for some greet recipes? Don't search further, you've found the right spot!</p>
         <div class="flex-container">
            
-            <div class="flex-item">
+            <div class="flex-container1">
                 <h2><a href="recipes/lasagna.html" target='new'>Lasagna</a></h2>
                 <p>A perfect recipe for lasagna</p>
                 <img src="images/lasagna.jpg" alt="Lasagna">
             </div>
             <div class="flex-item">
                 <h2><a href="recipes/mojito.html" target='new'>Mojito (18+)</a></h2>
-                <p>The perfect drink for hot summer nights.</p>
+                <p>.flex-item { </br>
+                    background: peachpuff;</br>
+                    border: 2px solid brown;</br>
+                    flex: 1 1 0;</br>
+                    margin: 4px;</br>
+                    padding: 8px;</p>
             </div>
             <div class="flex-item">
                 <h2><a href="recipes/pasta-carbonara.html" target='new'>Pasta carbonara</a></h2>
                 <p>Still hungry in the late summer afternoon? Try this carbonara!</p>
+                <p>.flex-item</p>
             </div>
                 <div class="flex-item">
                     <h2><a href="recipes/pasta-carbonara.html" target='new'>Pasta carbonara</a></h2>
@@ -42,9 +49,14 @@
                     <p>"Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
                 </div>
             </div>
-            <div class="flex-item2">
+            <div class="flex-item">
                 <h2><a href="recipes/pasta-carbonara.html" target='new'>Pasta carbonara</a></h2>
-                <p>Still hungry in the late summer afternoon? Try this carbonara!</p>
+                <p>.flex-item2 {</br>
+                    background: peachpuff;</br>
+                    border: 2px solid brown;</br>
+                    flex: 1 1 0;</br>
+                    margin: 4px;</br>
+                    padding: 8px;</p>
             </div>
             <div class="flex-item">
                 <h2><a href="recipes/pasta-carbonara.html" target='new'>Pasta carbonara</a></h2>
